[gd_scene load_steps=10 format=3 uid="uid://dt1k4buk7axya"]

[ext_resource type="Texture2D" uid="uid://cc6p415xlnli8" path="res://Game V2/Sprites/Shop reroll.png" id="1_37uet"]
[ext_resource type="Shader" path="res://Game V2/scripts/Shaders/color_swap.gdshader" id="1_sgrpa"]
[ext_resource type="Script" path="res://Game V2/scripts/reroll.gd" id="2_8ympr"]
[ext_resource type="PackedScene" uid="uid://c1op7ibp8ntlm" path="res://Game V2/Scenes/stats_block.tscn" id="3_wnwwv"]
[ext_resource type="Texture2D" uid="uid://f7k0guv8d817" path="res://Game V2/Sprites/info gold position.png" id="4_4ptjp"]
[ext_resource type="Texture2D" uid="uid://dl662fivjybb3" path="res://Game V2/Sprites/Equipment/1x1 hover border.png" id="5_c50to"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qvaqd"]
shader = ExtResource("1_sgrpa")
shader_parameter/target_color_1 = null
shader_parameter/replace_color_1 = null
shader_parameter/target_color_2 = null
shader_parameter/replace_color_2 = null
shader_parameter/tolerance = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s3c4r"]
size = Vector2(32, 32)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8q7g7"]
shader = ExtResource("1_sgrpa")
shader_parameter/target_color_1 = null
shader_parameter/replace_color_1 = null
shader_parameter/target_color_2 = null
shader_parameter/replace_color_2 = null
shader_parameter/tolerance = null

[node name="Reroll" type="Sprite2D"]
texture_filter = 1
material = SubResource("ShaderMaterial_qvaqd")
texture = ExtResource("1_37uet")
script = ExtResource("2_8ympr")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_s3c4r")

[node name="Gold" parent="." instance=ExtResource("3_wnwwv")]
position = Vector2(32, 5)
texture = ExtResource("4_4ptjp")
show_hover = false

[node name="Hover_border" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_8q7g7")
texture = ExtResource("5_c50to")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="ready" from="Gold" to="." method="_on_gold_ready"]

[editable path="Gold"]
[editable path="Gold/Hover"]
